<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_common"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="320dp"
        android:id="@+id/content_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_view"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/usernameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Username"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/register_username_input"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="50dp"
            android:layout_below="@+id/usernameTitle"
            android:hint="Enter your Username Here" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:layout_below="@id/register_username_input"
            android:text="Email" />

        <EditText
            android:id="@+id/register_email_input"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="50dp"
            android:hint="Enter your Email Here"
            android:inputType="textEmailAddress"
            android:layout_below="@id/emailTitle" />

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:layout_below="@id/register_email_input"/>

        <EditText
            android:id="@+id/register_password_input"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/passwordTitle"
            android:hint="Enter your Password Here"
            android:inputType="textPassword" />

    </RelativeLayout>

    <Button
        android:id="@+id/register_createAccount_btn"
        android:layout_width="250dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/content_signup"
        android:background="#CC6633"
        android:text="Create Your Account"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
